fix price logic in price function & add backface-visibility to all images

--- a/wp-content/themes/lbilimited/style.css
+++ b/wp-content/themes/lbilimited/style.css
@@ -143,6 +143,7 @@ sub {
 
 img {
 	border: 0;
+	backface-visibility: hidden;
 }
 
 svg:not(:root) {
